radio buttons alineados
Los radio buttons ahora estan horizontales

--- a/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/static/main.css
+++ b/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/static/main.css
@@ -79,3 +79,8 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+#radioHorizontal li{
+  display: inline-block;
+  margin: 0 40px 0 10px;
+}
