--- a/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/templates/account.html
+++ b/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/templates/account.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
+
+
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Ingresa tu opinión</legend>
-                <div class="form-group">
+                <div class="form-group" id="radioHorizontal">
                     {{ form.inteligence.label(class="form-control-label") }}
                     {% if form.inteligence.errors %}
                         {{ form.inteligence(class="form-control form-control-lg is-invalid") }}
@@ -18,7 +20,7 @@
                         {{ form.inteligence(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="radioHorizontal">
                     {{ form.trust.label(class="form-control-label") }}
                     {% if form.trust.errors %}
                         {{ form.trust(class="form-control form-control-lg is-invalid") }}
@@ -30,19 +32,6 @@
                     {% else %}
                         {{ form.trust(class="form-control form-control-lg") }}
                     {% endif %}
-
-
-                    {% for subfield in form %}
-                    <tr>
-                        <td>{{ subfield.label }}</td>
-                    </tr>
-                    <tr>
-                        <td>{{ subfield }}</td>
-
-                    </tr>
-                    {% endfor %}
-
-
                 </div>
                 <div class="form-group">
                     {{ form.opinion.label(class="form-control-label") }}
