--- a/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/templates/layout.html
+++ b/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/templates/layout.html
@@ -24,7 +24,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Inicio</a>
+              <!--<a class="nav-item nav-link" href="{{ url_for('home') }}">Inicio</a>-->
               <a class="nav-item nav-link" href="{{ url_for('about') }}">Nosotros</a>
             </div>
             <!-- Navbar Right Side -->
