--- a/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/templates/wordcloud.html
+++ b/GITHUB_CONGRESISTAS/Flask_Blog/flaskblog/templates/wordcloud.html
@@ -1,8 +1,82 @@
 {% extends "layout.html" %}
 {% block content %}
-  <div class="container" id="wordcloud">
 
+<!--
+  <div class="container">
+    <form>
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1"> <h3 style="color: green"> Y tú que opinas? </h3> </label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <button type="submit" class="btn btn-success">Enviar Opinión</button>
+    <a class="btn btn-info" href="/" >Seleccionar Congresista</a>
+  </form>
 
-  <img src="{% print(imagen) %}" class="img-fluid">
   </div>
+-->
+  <div class="container">
+    <div class="content-section">
+      <div class="row"> <h2 style="color:#8004F5"> {{twitter_user}} </h2> </div>
+      <div class="row justify-content-md-center"><img src="{% print(imagen) %}"  class="rounded mx-auto d-block"></div>
+    </div>
+    
+    <div class="content-section">
+        <form method="POST" action="/enviaropinion">
+            <input type="hidden" id="congresista" name="congresistaUser" value="{{twitter_user}}">
+
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4"><h3 style="color: green"> Y tú que opinas? </h3></legend>
+                <!--
+                <div class="form-group" id="radioHorizontal">
+                    {{ form.inteligence.label(class="form-control-label") }}
+                    {% if form.inteligence.errors %}
+                        {{ form.inteligence(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.inteligence.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.inteligence(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group" id="radioHorizontal">
+                    {{ form.trust.label(class="form-control-label") }}
+                    {% if form.trust.errors %}
+                        {{ form.trust(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.trust.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.trust(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                -->
+                <div class="form-group">
+                    {{ form.opinion.label(class="form-control-label") }}
+                    {% if form.opinion.errors %}
+                        {{ form.opinion(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.opinion.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.opinion(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+                <a class="btn btn-outline-primary" href="/" >Seleccionar Congresista</a>
+            </div>
+        </form>
+
+    </div>
+
+  </div>
+
 {% endblock content %}
