--- a/congressmanapp/templates/account.html
+++ b/congressmanapp/templates/account.html
@@ -1,55 +1,56 @@
 {% extends "layout.html" %}
 {% block content %}
 
-
-    <div class="content-section">
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Ingresa tu opinión</legend>
-                <div class="form-group" id="radioHorizontal">
-                    {{ form.inteligence.label(class="form-control-label") }}
-                    {% if form.inteligence.errors %}
-                        {{ form.inteligence(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.inteligence.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.inteligence(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group" id="radioHorizontal">
-                    {{ form.trust.label(class="form-control-label") }}
-                    {% if form.trust.errors %}
-                        {{ form.trust(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.trust.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.trust(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
+    <div class="col-md-8">
+        <div class="content-section">
+            <form method="POST" action="">
+                {{ form.hidden_tag() }}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Ingresa tu opinión</legend>
+                    <div class="form-group" id="radioHorizontal">
+                        {{ form.inteligence.label(class="form-control-label") }}
+                        {% if form.inteligence.errors %}
+                            {{ form.inteligence(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.inteligence.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.inteligence(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group" id="radioHorizontal">
+                        {{ form.trust.label(class="form-control-label") }}
+                        {% if form.trust.errors %}
+                            {{ form.trust(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.trust.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.trust(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.opinion.label(class="form-control-label") }}
+                        {% if form.opinion.errors %}
+                            {{ form.opinion(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.opinion.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.opinion(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                </fieldset>
                 <div class="form-group">
-                    {{ form.opinion.label(class="form-control-label") }}
-                    {% if form.opinion.errors %}
-                        {{ form.opinion(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.opinion.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.opinion(class="form-control form-control-lg") }}
-                    {% endif %}
+                    {{ form.submit(class="btn btn-outline-info") }}
                 </div>
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 {% endblock content %}
