--- a/congressmanapp/templates/congresistas.html
+++ b/congressmanapp/templates/congresistas.html
@@ -2,37 +2,41 @@
 {% block content %}
 
 
-<div class="row">
-  <div class="row">
-
-      <form action="/wordcloud" method="POST">
-      <div class="form-group">
-        <label for="exampleFormControlSelect1">Seleccionar Congresista</label>
-        <select class="form-control" id="congresistaFormControlSelect" name="congresistaSeleccionado">
-          {% for index, row in df.iterrows() %}
-          <option value = {% print(row["twitter_user"]) %} > {% print(row["name"]) %} </option>
-          {% endfor %}
-        </select>
-      </div>
-      <button type="submit" class="btn btn-primary">Mostrar WordCloud</button>
-
-    </form>
-  </div>
-    
-  <div class="row" id="seleccionarPorFoto">
-    
-
-      {% for index, row in df.iterrows() %}
-      <a href="{{ url_for('wordcloudcongresista' , twitter_user = row['twitter_user']  ) }}">
-        <img src="{% print(row['img']) %}" title="{% print(row['twitter_name']) %}">
-      </a>
-      {% endfor %}
+    <div class="container">
 
 
+        <form class="form-inline" action="/wordcloud" method="POST">
 
-  </div>
+            <div class="form-group mb-2">
+                <label for="staticEmail2" class="sr-only">Seleccionar Congresista</label>
+            </div>
 
-</div>
+            <div class="form-group mx-sm-3 mb-2">
+                <select class="form-control" id="congresistaFormControlSelect" name="congresistaSeleccionado">
+                    {% for index, row in df.iterrows() %}
+                        <option value={% print(row["twitter_user"]) %}> {% print(row["name"]) %} </option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary mb-2">Mostrar WordCloud</button>
+
+        </form>
+
+
+        <div class="row" id="seleccionarPorFoto">
+
+
+            {% for index, row in df.iterrows() %}
+                <a href="{{ url_for('wordcloudcongresista' , twitter_user = row['twitter_user']  ) }}">
+                    <img src="{% print(row['img']) %}" title="{% print(row['twitter_name']) %}">
+                </a>
+            {% endfor %}
+
+
+        </div>
+
+    </div>
 
 
 
