--- a/congressmanapp/templates/congresistas.html
+++ b/congressmanapp/templates/congresistas.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-    <div class="container">
+    <div class="row">
 
 
         <form class="form-inline" action="/wordcloud" method="POST">
@@ -22,21 +22,21 @@
             <button type="submit" class="btn btn-primary mb-2">Mostrar WordCloud</button>
 
         </form>
+    </div>
+
+    <div class="row" id="seleccionarPorFoto">
 
 
-        <div class="row" id="seleccionarPorFoto">
+        {% for index, row in df.iterrows() %}
+            <a href="{{ url_for('wordcloudcongresista' , twitter_user = row['twitter_user']  ) }}">
+                <img src="{% print(row['img']) %}" title="{% print(row['name']) %}" data-toggle="tooltip"
+                     data-placement="bottom">
+            </a>
+        {% endfor %}
 
-
-            {% for index, row in df.iterrows() %}
-                <a href="{{ url_for('wordcloudcongresista' , twitter_user = row['twitter_user']  ) }}">
-                    <img src="{% print(row['img']) %}" title="{% print(row['twitter_name']) %}">
-                </a>
-            {% endfor %}
-
-
-        </div>
 
     </div>
+
 
 
 
