--- a/congressmanapp/templates/layout.html
+++ b/congressmanapp/templates/layout.html
@@ -95,6 +95,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script type="application/javascript">
+    $(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
 
+</script>
 </body>
 </html>
