--- a/congressmanapp/templates/wordcloud.html
+++ b/congressmanapp/templates/wordcloud.html
@@ -65,7 +65,7 @@
         </div>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
-            <a class="btn btn-outline-primary" href="/">Cancelar</a>
+            <a class="btn btn-outline-primary" href="/bancadas">Regresar</a>
         </div>
     </form>
 
