wordcloud el comercio

--- a/congressmanapp/templates/wordcloud.html
+++ b/congressmanapp/templates/wordcloud.html
@@ -18,11 +18,15 @@
         <hr>
 
         <div class="row">
+            <div class="col"><img src="{% print(imagen) %}" class="rounded mx-auto d-block">
+                <h1 align="center">Twitter</h1></div>
             <div class="col"><img src="{% print(congresistaImg) %}" class="rounded mx-auto d-block"
                                   title="{{ congresistaName }}"
                                   data-toggle="tooltip"
                                   data-placement="bottom"></div>
-            <div class="col"><img src="{% print(imagen) %}" class="rounded mx-auto d-block"></div>
+            <div class="col"><img src="{% print(imagenComercio) %}" class="rounded mx-auto d-block">
+                <h1 align="center">El Comercio</h1></div>
+
 
         </div>
         Posivite Tweets
